--- a/source/home.html
+++ b/source/home.html
@@ -1,6 +1,8 @@
 {% if theme.welcome_image or theme.welcome_text != blank %}
   <div class="home-welcome">
-    {% if theme.welcome_image %}<img class="welcome-image" src="{{ theme.images.welcome_image.url | constrain: 2000,1400 }}" alt="Welcome to {{ store.name | escape }}">{% endif %}
+    {% if theme.welcome_image %}
+      <img class="lazy welcome-image" src="{{ theme.images.welcome_image.url | constrain: 100,70 }}" data-src="{{ theme.images.welcome_image.url | constrain: 1000,700 }}" data-srcset="{{ theme.images.welcome_image.url | constrain: 2000,1400 }} 2x, {{ theme.images.welcome_image.url | constrain: 1000,700 }} 1x" alt="Welcome to {{ store.name | escape }}">
+    {% endif %}
     {% if theme.welcome_text != blank %}
       <div class="welcome-message{% if theme.welcome_image %} with-image{% endif %}">
         {% if theme.welcome_text != blank %}<div class="welcome-message-text">{{ theme.welcome_text }}</div>{% endif %}
@@ -12,6 +14,7 @@
 {% if theme.featured_items_type == 'Categories' %}
   {% if categories.active != blank and theme.featured_items > 0 %}
     <div class="featured-categories">
+      <h1 class="visually-hidden">Featured categories</h1>
       {% for category in categories.active limit:theme.featured_items %}
         <div class="featured-category">
           <div class="featured-category-info">
@@ -22,7 +25,7 @@
           <div class="featured-category-products">
             {% for product in category.products limit:2 %}
               <div class="featured-category-product {% if forloop.length == 1 %}single-featured-product{% endif %}">
-                <img alt="Image of {{ product.name | escape }}" class="featured-category-product-image" src="{{ product.image | product_image_url | constrain: 400 }}">
+                <img alt="Image of {{ product.name | escape }}" class="featured-category-product-image lazy" src="{{ product.image | product_image_url | constrain: 50 }}" data-src="{{ product.image | product_image_url | constrain: 400 }}" data-srcset="{{ product.image | product_image_url | constrain: 800 }} 2x, {{ product.image | product_image_url | constrain: 400 }} 1x">
               </div>
             {% endfor %}
           </div>
@@ -30,42 +33,143 @@
         </div>
       {% endfor %}
     </div>
-    <a class="button centered-button" href="/products" title="View All Products">View All</a>
+    <a class="button centered-button" href="/products">View All Products</a>
   {% endif %}
 
 {% else %}
   {% if theme.featured_items > 0 %}
-    {% get products from products.all limit:theme.featured_items %}
+    {% paginate products from products.all by theme.featured_items %}
       {% if products != blank %}
-        <div class="product-list">
-          {% for product in products %}
-            {% assign product_status = '' %}
-            {% case product.status %}
-            	{% when 'active' %}
-            		{% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
-            	{% when 'sold-out' %}
-            		{% assign product_status = 'Sold out' %}
-            	{% when 'coming-soon' %}
-            		{% assign product_status = 'Coming soon' %}
-            {% endcase %}
-            <a class="product-list-item" href="{{ product.url }}" title="View {{ product.name | escape }}">
-              <div class="product-list-item-container">
-                <figure class="product-list-image-container {% if product.images[1] != blank and theme.secondary_image_on_hover == true %}show-secondary{% endif %}">
-                  <img alt="Image of {{ product.name | escape }}" class="product-list-image {% if product.image.height > product.image.width %}image-tall{% elsif product.image.height < product.image.width %}image-wide{% else %}image-square{% endif %}" src="{{ product.image | product_image_url | constrain: 1000, 1000 }}">
-                  {% if product.images[1] != blank and theme.secondary_image_on_hover == true %}
-                  <img alt="Image of {{ product.name | escape }}" class="product-list-image {% if product.image.height > product.image.width %}image-tall{% elsif product.image.height < product.image.width %}image-wide{% else %}image-square{% endif %} secondary-image" src="{{ product.images[1] | product_image_url | constrain: 1000, 1000 }}">
+        <h1 class="visually-hidden">Featured products</h1>
+        <div class="product-list-container">
+          <div class="product-list {{ theme.product_list_layout }}">
+            {% for product in products %}
+              {% if theme.max_products_per_row == 4 %}
+                {% assign product_image_constrain_width = 288 %}
+                {% assign product_image_constrain_height = 288 %}
+                {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+              {% elsif theme.max_products_per_row == 3 %}
+                {% assign product_image_constrain_width = 390 %}
+                {% assign product_image_constrain_height = 390 %}
+                {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+              {% elsif theme.max_products_per_row == 2 %}
+                {% assign product_image_constrain_width = 592 %}
+                {% assign product_image_constrain_height = 526 %}
+                {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+              {% elsif theme.max_products_per_row == 1 %}
+                {% assign product_image_constrain_width = 1200 %}
+                {% assign product_image_constrain_height = 1200 %}
+                {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+              {% endif %}
+              {% assign thumb_constrain_width = 30 %}
+              {% assign thumb_constrain_height = 30 %}
+
+              {% assign product_status = '' %}
+              {% case product.status %}
+                {% when 'active' %}
+                  {% if product.on_sale %}{% assign product_status = 'On sale' %}{% endif %}
+                {% when 'sold-out' %}
+                  {% assign product_status = 'Sold out' %}
+                {% when 'coming-soon' %}
+                  {% assign product_status = 'Coming soon' %}
+              {% endcase %}
+              {% capture image_class %}
+                {% if product.image.height > product.image.width %}
+                  image-tall
+                  {% if theme.grid_image_style == 'crop-to-square' %}
+                    {% assign product_image_constrain_height = '' %}
+                    {% assign product_image_constrain_height_large = '' %}
+                    {% assign thumb_constrain_height = '' %}
                   {% endif %}
-                </figure>
-              </div>
-              <div class="product-list-item-name">{{ product.name }}</div>
-              <div class="product-list-item-price">{{ product.default_price | money: theme.money_format }}{% if product_status != blank %} &mdash; <span class="product-status">{{ product_status }}</span>{% endif %}</div>
-            </a>
-          {% endfor %}
+                {% elsif product.image.height < product.image.width %}
+                  image-wide
+                  {% if theme.grid_image_style == 'crop-to-square' %}
+                    {% assign product_image_constrain_width = '' %}
+                    {% assign product_image_constrain_width_large = '' %}
+                    {% assign thumb_constrain_width = '' %}
+                  {% endif %}
+                {% else %}
+                  image-square
+                {% endif %}
+              {% endcapture %}
+              <a class="product-list-thumb {{ theme.grid_image_style }}" href="{{ product.url }}" title="View {{ product.name | escape }}">
+                <div class="product-list-thumb-container">
+                  <figure class="product-list-image-container {% if product.images[1] != blank and theme.secondary_image_on_hover == true %}show-secondary{% endif %}">
+                    <div class="image-wrapper">
+                      <img alt="" class="lazy product-list-image {{ image_class }}" src="{{ product.image | product_image_url | constrain: thumb_constrain_width,thumb_constrain_height }}" data-src="{{ product.image | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }}" data-srcset="{{ product.image | product_image_url | constrain: product_image_constrain_width_large, product_image_constrain_height_large }} 2x, {{ product.image | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }} 1x">
+                      {% if product.images[1] != blank and theme.secondary_image_on_hover == true %}
+                        {% if theme.max_products_per_row == 4 %}
+                          {% assign product_image_constrain_width = 288 %}
+                          {% assign product_image_constrain_height = 288 %}
+                          {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                          {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                        {% elsif theme.max_products_per_row == 3 %}
+                          {% assign product_image_constrain_width = 390 %}
+                          {% assign product_image_constrain_height = 390 %}
+                          {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                          {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                        {% elsif theme.max_products_per_row == 2 %}
+                          {% assign product_image_constrain_width = 592 %}
+                          {% assign product_image_constrain_height = 526 %}
+                          {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                          {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                        {% elsif theme.max_products_per_row == 1 %}
+                          {% assign product_image_constrain_width = 1200 %}
+                          {% assign product_image_constrain_height = 1200 %}
+                          {% assign product_image_constrain_width_large = product_image_constrain_width | times: 2 %}
+                          {% assign product_image_constrain_height_large = product_image_constrain_height | times: 2 %}
+                        {% endif %}
+                        {% assign thumb_constrain_width = 30 %}
+                        {% assign thumb_constrain_height = 30 %}
+                        {% capture secondary_image_class %}
+                          {% if product.images[1].height > product.images[1].width %}
+                            image-tall
+                            {% if theme.grid_image_style == 'crop-to-square' %}
+                              {% assign product_image_constrain_height = '' %}
+                              {% assign product_image_constrain_height_large = '' %}
+                              {% assign thumb_constrain_height = '' %}
+                            {% endif %}
+                          {% elsif product.images[1].height < product.images[1].width %}
+                            image-wide
+                            {% if theme.grid_image_style == 'crop-to-square' %}
+                              {% assign product_image_constrain_width = '' %}
+                              {% assign product_image_constrain_width_large = '' %}
+                              {% assign thumb_constrain_width = '' %}
+                            {% endif %}
+                          {% else %}
+                            image-square
+                          {% endif %}
+                        {% endcapture %}
+                        <img alt="" class="lazy product-list-image {{ secondary_image_class }}" src="{{ product.images[1] | product_image_url | constrain: thumb_constrain_width,thumb_constrain_height }}" data-src="{{ product.images[1] | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }}" data-srcset="{{ product.images[1] | product_image_url | constrain: product_image_constrain_width_large, product_image_constrain_height_large }} 2x, {{ product.images[1] | product_image_url | constrain: product_image_constrain_width, product_image_constrain_height }} 1x">
+                      {% endif %}
+                    </div>
+                  </figure>
+                </div>
+                <div class="product-list-thumb-info">
+                  <div class="product-list-thumb-name">{{ product.name }}</div>
+                  <div class="product-list-thumb-price">
+                    {% if product.variable_pricing %}
+                      {{ product.min_price | money: theme.money_format }} - {{ product.max_price | money: theme.money_format }}
+                    {% else %}
+                      {{ product.default_price | money: theme.money_format }}
+                    {% endif %}
+                    {% if product_status != blank %}<span class="product-list-thumb-status">&mdash; {{ product_status }}</span>{% endif %}
+                  </div>
+                </div>
+              </a>
+            {% endfor %}
+          </div>
         </div>
-        <a class="button centered-button" href="/products" title="View All Products">View All</a>
+        {% if paginate.pages > 1 %}
+          <a class="button centered-button" href="/products" title="View All Products">View All</a>
+        {% endif %}
       {% else %}
         <h1 class="page-title products-page-title">No products found</h1>
       {% endif %}
-    {% endget %}
+    {% endpaginate %}
   {% endif %}
 {% endif %}
