--- a/source/layout.html
+++ b/source/layout.html
@@ -319,7 +319,7 @@
     <footer class="footer">
       <div class="wrapper">
         <div class="footer-store-name">{{ store.name }}</div>
-        <div class="footer-store-credit">{{ bigcartel_credit }}</div>
+        <div class="footer-store-credit">{{ powered_by_big_cartel }}</div>
       </div>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
