--- a/source/layout.html
+++ b/source/layout.html
@@ -10,14 +10,14 @@
   <body id="{{ page.permalink }}" class="{{ page.category }}">
     <a class="skip-link" href="#main">Skip to main content</a>
     {% if theme.announcement_message_text != blank %}
-      <aside class="flash-message">
-        <div class="flash-message-text">{{ theme.announcement_message_text }}</div>
-        <button class="flash-message-close" title="Close announcement message">
-          <svg aria-hidden="true" height="16" width="16" class="close-icon" viewBox="0 0 17 17">
-            <path d="M17 1.4L15.6 0 8.5 7.1 1.4 0 0 1.4l7.1 7.1L0 15.6 1.4 17l7.1-7.1 7.1 7.1 1.4-1.4-7.1-7.1z"></path>
+      <div aria-label="Announcement message" class="announcement-message">
+        <div class="announcement-message__text">{{ theme.announcement_message_text }}</div>
+        <button title="Close announcement message" class="announcement-message__close-button">
+          <svg aria-hidden="true" fill="currentColor" class="announcement-message__close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="9.2 12.3 12.5 12.5">
+            <path d="m21.4 14.4-4.1 4.1 4 4.1c.6.5.6 1.3 0 1.8-.4.5-1.2.5-1.7 0l-4.1-4.1-4.1 4.1c-.5.5-1.3.5-1.8 0s-.5-1.3 0-1.8l4.1-4.1-4.1-4.1c-.5-.5-.5-1.3 0-1.8s1.3-.5 1.8 0l4.1 4.1 4.1-4c.5-.6 1.3-.6 1.8 0 .5.4.5 1.2 0 1.7Z"/>
           </svg>
         </button>
-      </aside>
+      </div>
     {% endif %}
     <header class="header">
       <div class="wrapper">
@@ -324,12 +324,59 @@
         <div class="footer-store-credit">{{ powered_by_big_cartel }}</div>
       </div>
     </footer>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      const themeOptions = {
+        showSoldOutOptions: {{ theme.show_sold_out_product_options }},
+        desktopProductPageImages: '{{ theme.desktop_product_page_images }}',
+        mobileProductPageImages: '{{ theme.mobile_product_page_images }}',
+        productImageZoom: {{ theme.product_image_zoom }},
+      }
+      const themeColors = {
+        backgroundColor: '{{ theme.background_color }}',
+        textColor: '{{ theme.text_color }}',
+      }
+    </script>
+    {% if theme.announcement_message_text != blank %}
+      <script>
+        let hashCode=function(s){return s.split("").reduce(function(a,b){a=((a<<5)-a)+b.charCodeAt(0);return a&a;},0);}
+        let announcementElement = document.querySelector(".announcement-message");
+        let announcementText = document.querySelector(".announcement-message__text").innerHTML;
+        let closeAnnouncementBtn = document.querySelector(".announcement-message__close-button");
+        let hashedAnnouncement = hashCode(announcementText);
+
+        function closeAnnouncement() {
+          let announcementElement = document.querySelector(".announcement-message");
+          announcementElement?.remove();
+          document.cookie = `announcementClosed=${hashedAnnouncement};path=/`;
+        }
+
+        if (announcementElement?.classList && closeAnnouncementBtn && hashedAnnouncement) {
+          let hasClosedAnnouncement = document.cookie.includes(`announcementClosed=${hashedAnnouncement}`);
+          if (!hasClosedAnnouncement) {
+            announcementElement.classList.add('visible');
+          }
+          closeAnnouncementBtn.addEventListener("click", closeAnnouncement);
+        }
+      </script>
+    {% endif %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="{{ 'api' | theme_js_url }}"></script>
+    <script type="text/javascript">
+      var formatMoney = Format.money;
+      Format.money = function(number) {
+        {% case theme.money_format %}
+        {% when 'sign' %}
+          return formatMoney(number, true, true, false);
+        {% when 'code' %}
+          return formatMoney(number, true, false, true);
+        {% when 'sign_and_code' %}
+          return formatMoney(number, true, true, true);
+        {% endcase %}
+      };
+    </script>
     <script src="{{ theme | theme_js_url }}"></script>
     {% if page.full_url contains '/product/' %}
       <script>
-        var show_sold_out_product_options = '{{ theme.show_sold_out_product_options }}';
         Product.find('{{ product.permalink }}', processProduct)
       </script>
     {% endif %}
