--- a/source/contact.html
+++ b/source/contact.html
@@ -1,34 +1,38 @@
-{% if contact.sent %}
-  <h1 class="page-title">Your message has been sent and we'll get back to you soon!</h1>
-{% else %}
-  <h1 class="page-title">{{ page.name }}</h1>
-  <div class="page-content {{ page.category }}-content">
-    <form method="post" action="/contact" class="contact-form">
+<h1 class="page-title">{{ page.name }}</h1>
 
-      <div class="contact-form-group">
-        <label class="contact-form-label contact-name" for="name">Name</label>
+{% if contact.sent %}
+  <div class="message-banner message-banner--no-bg message-banner--centered">Thanks! Your message has been sent and we'll get back to you soon.</div>
+{% else %}
+  <form method="post" action="/contact" class="contact-form">
+    <div class="contact-form-block contact-name">
+      <label class="contact-label" for="name">Name</label>
+      <div class="input-holder">
         {{ contact | contact_input: 'name' }}
       </div>
-      <div class="contact-form-group">
-        <label class="contact-form-label contact-email" for="email">Email</label>
+    </div>
+    <div class="contact-form-block contact-email">
+      <label class="contact-label" for="email">Email</label>
+      <div class="input-holder">
         {{ contact | contact_input: 'email' }}
       </div>
-      <div class="contact-form-group">
-        <label class="contact-form-label contact-subject" for="subject">Subject</label>
+    </div>
+    <div class="contact-form-block contact-subject">
+      <label class="contact-label" for="subject">Subject</label>
+      <div class="input-holder">
         {{ contact | contact_input: 'subject' }}
       </div>
-      <div class="contact-form-group">
-        <label class="contact-form-label contact-message" for="message">Message</label>
+    </div>
+    <div class="contact-form-block contact-message">
+      <label class="contact-label" for="message">Message</label>
+      <div class="input-holder">
         {{ contact | contact_input: 'message' }}
       </div>
-      <div class="contact-form-group contact-recaptcha">
-        <div class="recaptcha-note">{{ contact.recaptcha }}</div>
-      </div>
-
-      <div class="contact-form-group contact-send">
-        <button class="button send-message-button" type="submit" name="submit" title="Send Message" tabindex="6">Send Message</button>
-      </div>
-    </form>
-  </div>
+    </div>
+    <div class="contact-form-block contact-send">
+      <button class="button" type="submit" name="submit">Send message</button>
+    </div>
+    <div class="contact-form-block recaptcha-note">
+      <p>{{ contact.recaptcha }}</p>
+    </div>
+  </form>
 {% endif %}
-
