--- a/source/contact.html
+++ b/source/contact.html
@@ -1,5 +1,11 @@
 <h1 class="page-title">{{ page.name }}</h1>
-
+{% if errors != blank %}
+  <div class="message-banner message-banner--errors message-banner--centered">
+    {% for error in errors %}
+      <div>{{ error }}</div>
+    {% endfor %}
+  </div>
+{% endif %}
 {% if contact.sent %}
   <div class="message-banner message-banner--no-bg message-banner--centered">Thanks! Your message has been sent and we'll get back to you soon.</div>
 {% else %}
