--- a/source/layout.html
+++ b/source/layout.html
@@ -33,8 +33,8 @@
           <div class="mobile-header__icons">
             {% if theme.show_search %}
               <button class="nav-button open-search" type="button" aria-haspopup="dialog" aria-controls="search-modal" title="Open search menu">
-                <svg aria-hidden="true" fill="currentColor" width="20" height="20" viewBox="0 0.5 19.99 20.03">
-                  <path d="M16.25 8.625C16.25 10.4219 15.6641 12.1016 14.6875 13.4297L19.6094 18.3906C20.1172 18.8594 20.1172 19.6797 19.6094 20.1484C19.1406 20.6562 18.3203 20.6562 17.8516 20.1484L12.8906 15.1875C11.5625 16.2031 9.88281 16.75 8.125 16.75C3.63281 16.75 0 13.1172 0 8.625C0 4.17188 3.63281 0.5 8.125 0.5C12.5781 0.5 16.25 4.17188 16.25 8.625ZM8.125 14.25C10.1172 14.25 11.9531 13.1953 12.9688 11.4375C13.9844 9.71875 13.9844 7.57031 12.9688 5.8125C11.9531 4.09375 10.1172 3 8.125 3C6.09375 3 4.25781 4.09375 3.24219 5.8125C2.22656 7.57031 2.22656 9.71875 3.24219 11.4375C4.25781 13.1953 6.09375 14.25 8.125 14.25Z"></path>
+                <svg class="search-modal__submit-icon" aria-hidden="true" fill="currentColor" viewBox="0 0 22.91 23.12">
+                  <path d="M0 9.35c0 5.16 4.2 9.35 9.35 9.35 2.04 0 3.9-.66 5.44-1.76l5.77 5.78c.27.27.62.4 1 .4.8 0 1.35-.6 1.35-1.38 0-.38-.14-.71-.39-.96l-5.73-5.77c1.21-1.57 1.92-3.53 1.92-5.66C18.7 4.2 14.51 0 9.35 0S0 4.2 0 9.35Zm2 0C2 5.3 5.29 2 9.35 2s7.35 3.29 7.35 7.35-3.29 7.35-7.35 7.35S2 13.41 2 9.35Z" class="cls-1"/>
                 </svg>
               </button>
             {% endif %}
@@ -50,22 +50,46 @@
         </div>
       </div>
       <div class="wrapper">
-        <a href="/" title="{{ store.name | escape }}" class="header-store-link header-store-link--{% if theme.header_logo != blank %}logo{% else %}text{% endif %}">
-          {% if theme.logo != blank %}
-            {% assign logo_image_height_1x = theme.logo_image_height %}
-            {% assign logo_image_height_2x = logo_image_height_1x | times: 2 %}
-            <img
-              class="store-logo"
-              srcset="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}, {{ theme.images.logo.url | constrain: '', logo_image_height_2x }} 2x"
-              src="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}"
-              alt="{{ store.name }} Home"
-            >
-          {% else %}
-            {{ store.name }}
-          {% endif %}
-        </a>
+        <div class="header-columns">
+          <div class="header-left">
+            {% if theme.show_search %}
+              <button class="nav-button open-search" type="button" aria-haspopup="dialog" aria-controls="search-modal" title="Open search menu">
+                <svg class="search-modal__submit-icon" aria-hidden="true" fill="currentColor" viewBox="0 0 22.91 23.12">
+                  <path d="M0 9.35c0 5.16 4.2 9.35 9.35 9.35 2.04 0 3.9-.66 5.44-1.76l5.77 5.78c.27.27.62.4 1 .4.8 0 1.35-.6 1.35-1.38 0-.38-.14-.71-.39-.96l-5.73-5.77c1.21-1.57 1.92-3.53 1.92-5.66C18.7 4.2 14.51 0 9.35 0S0 4.2 0 9.35Zm2 0C2 5.3 5.29 2 9.35 2s7.35 3.29 7.35 7.35-3.29 7.35-7.35 7.35S2 13.41 2 9.35Z" class="cls-1"/>
+                </svg>
+              </button>
+            {% endif %}
+          </div>
+          <div class="store-name {% if theme.logo != blank %}image{% else %}text{% endif %}">
+            <a href="/" title="{{ store.name | escape }}" class="header-store-link header-store-link--{% if theme.header_logo != blank %}logo{% else %}text{% endif %}">
+              {% if theme.logo != blank %}
+                {% assign logo_image_height_1x = theme.logo_image_height %}
+                {% assign logo_image_height_2x = logo_image_height_1x | times: 2 %}
+                <img
+                  class="store-logo"
+                  srcset="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}, {{ theme.images.logo.url | constrain: '', logo_image_height_2x }} 2x"
+                  src="{{ theme.images.logo.url | constrain: '', logo_image_height_1x }}"
+                  alt="{{ store.name }} Home"
+                >
+              {% else %}
+                {{ store.name }}
+              {% endif %}
+            </a>
+          </div>
+          <div class="header-right">
+            <div class="header-cart">
+              <a class="cart-link" href="/cart" aria-label="View cart, {{ cart.item_count | pluralize: 'Item', 'Items' }}">
+                <svg aria-hidden="true" fill="currentColor" width="23" height="20" viewBox="0 0.5 22.28 20.03">
+                  <path d="M0 1.4375C0 0.929688 0.390625 0.5 0.9375 0.5H2.69531C3.55469 0.5 4.33594 1.00781 4.6875 1.75H20.7422C21.7578 1.75 22.5 2.72656 22.2266 3.74219L20.625 9.67969C20.3125 10.9297 19.1797 11.75 17.9297 11.75H6.64062L6.875 12.8828C6.95312 13.3125 7.34375 13.625 7.77344 13.625H19.0625C19.5703 13.625 20 14.0547 20 14.5625C20 15.1094 19.5703 15.5 19.0625 15.5H7.77344C6.44531 15.5 5.27344 14.5625 5.03906 13.2344L3.00781 2.64844C2.96875 2.49219 2.85156 2.375 2.69531 2.375H0.9375C0.390625 2.375 0 1.98438 0 1.4375ZM5 18.625C5 17.9609 5.35156 17.375 5.9375 17.0234C6.48438 16.6719 7.22656 16.6719 7.8125 17.0234C8.35938 17.375 8.75 17.9609 8.75 18.625C8.75 19.3281 8.35938 19.9141 7.8125 20.2656C7.22656 20.6172 6.48438 20.6172 5.9375 20.2656C5.35156 19.9141 5 19.3281 5 18.625ZM18.125 16.75C18.7891 16.75 19.375 17.1406 19.7266 17.6875C20.0781 18.2734 20.0781 19.0156 19.7266 19.5625C19.375 20.1484 18.7891 20.5 18.125 20.5C17.4219 20.5 16.8359 20.1484 16.4844 19.5625C16.1328 19.0156 16.1328 18.2734 16.4844 17.6875C16.8359 17.1406 17.4219 16.75 18.125 16.75Z"></path>
+                </svg>
+                <span class="cart-value" aria-hidden="true">{{ cart.item_count }}</span>
+                <span class="visually-hidden">View cart</span>
+                <span class="cart-num-items-hidden visually-hidden">{{ cart.item_count | pluralize: 'item', 'items' }}</span>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
-
       <nav class="header-nav-container" aria-label="Primary">
         <div class="wrapper">
           <ul class="header-pages">
@@ -95,13 +119,6 @@
               <li class="header-page-link">{{ page | link_to }}</li>
             {% endfor %}
             <li class="header-page-link"><a href="/contact">{{ pages.contact.name }}</a></li>
-            <li class="header-page-link">
-              <a class="cart-link" href="/cart">
-                <span aria-hidden="true">Cart (<span class="cart-value" aria-hidden="true">{{ cart.item_count }}</span>)</span>
-                <span class="visually-hidden">View cart</span>
-                <span class="cart-num-items-hidden visually-hidden" aria-live="polite" aria-atomic="true">{{ cart.item_count | pluralize: 'item', 'items' }}</span>
-              </a>
-            </li>
           </ul>
         </div>
       </nav>
@@ -135,17 +152,9 @@
             {% endif %}
           </div>
         {% else %}
-        {% if errors != blank %}
-          <div class="message-banner message-banner--errors">
-            {% for error in errors %}
-              <div>{{ error }}</div>
-            {% endfor %}
-          </div>
-        {% endif %}
           {{ page_content }}
         {% endif %}
       </div>
-
       {% if page.full_url contains '/product/' %}
         {% if theme.show_related_products %}
           {% assign current_id = product.id %}
