--- a/source/cart.html
+++ b/source/cart.html
@@ -9,7 +9,7 @@
   {% endif %}
   {% if cart.items == blank %}
     <div class="cart-empty">
-      <div class="message-banner message-banner--no-bg message-banner--centered message-banner--empty-cart">Your cart is empty! Sounds like a good time to start shopping.</div>
+      <div class="message-banner message-banner--no-bg message-banner--centered message-banner--empty-cart">Your cart is empty!</div>
       <a href="/products" class="button">Shop now</a>
     </div>
   {% else %}
