--- a/source/layout.html
+++ b/source/layout.html
@@ -118,7 +118,9 @@
             {% for page in pages.all limit: theme.nav_items %}
               <li class="header-page-link">{{ page | link_to }}</li>
             {% endfor %}
-            <li class="header-page-link"><a href="/contact">{{ pages.contact.name }}</a></li>
+            {% if theme.nav_items < 3 %}
+              <li class="header-page-link"><a href="/contact">{{ pages.contact.name }}</a></li>
+            {% endif %}
           </ul>
         </div>
       </nav>
